# vrmlxpy

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  _clang-format  cpp.hint  testConfig.json.example  vrmlxpyConfig.json.example
doc/: boost_installation.md  (+3 more)
to_stl/: CMakeLists.txt
to_stl/src/: VrmlToStlConvertor.hpp  VrmlToStlExport.hpp  dummy.cpp  dummy.hpp
to_stl/src/actions/: BoxAction.cpp  BoxAction.hpp  GeometryAction.hpp  GroupAction.cpp  GroupAction.hpp  IndexedFaceSetAction.cpp  IndexedFaceSetAction.hpp  ShapeAction.cpp  ShapeAction.hpp  SwitchAction.cpp  SwitchAction.hpp  TransformAction.cpp  TransformAction.hpp
to_stl/src/calculators/: BoxCalculator.cpp  BoxCalculator.hpp  CalculatorResult.hpp  IndexedFaceSetCalculator.cpp  IndexedFaceSetCalculator.hpp  MeshSimplificator.hpp  test.hpp
to_stl/src/calculators/errors/: CalculatorError.hpp
to_stl/src/conversion_context/: BoxHandler.CoordConversionContext.cpp  BoxHandler.Vec3fArrayConversionContext.cpp  ColorHandler.CoordConversionContext.cpp  ColorHandler.Vec3fArrayConversionContext.cpp  ConversionContextMap.CoordConversionContext.cpp  ConversionContextMap.Vec3fArrayConversionContext.cpp  CoordConversionContext.hpp  CoordinateHandler.CoordConversionContext.cpp  CoordinateHandler.Vec3fArrayConversionContext.cpp  GroupHandler.CoordConversionContext.cpp  GroupHandler.Vec3fArrayConversionContext.cpp  IndexedFaceSetHandler.CoordConversionContext.cpp  IndexedFaceSetHandler.Vec3fArrayConversionContext.cpp  MeshTaskConversionContext.hpp  NormalHandler.CoordConversionContext.cpp  NormalHandler.Vec3fArrayConversionContext.cpp  ShapeHandler.CoordConversionContext.cpp  ShapeHandler.Vec3fArrayConversionContext.cpp  StlActionMap.hpp  TextureCoordinateHandler.CoordConversionContext.cpp  TextureCoordinateHandler.Vec3fArrayConversionContext.cpp  TransformHandler.Vec3fArrayConversionContext.cpp  TransformationHandler.Vec3fArrayConversionContext.cpp  Vec3fArrayConversionContext.hpp  VrmlNodeTraversor.CoordConversionContext.cpp  VrmlNodeTraversor.Vec3fArrayConversionContext.cpp  WorldInfoHandler.CoordConversionContext.cpp  WorldInfoHandler.Vec3fArrayConversionContext.cpp
to_stl/src/core/: Mesh.hpp  MeshTask.hpp
to_stl/src/core/io/: StlFileWriter.hpp
to_stl/tests/: CalculatorsTest.cpp  VrmlFileTraversorTest.cpp
to_stl/tests/test_data/: CalculatorsTestDataset.hpp  VrmlFileTraversorTestDataset.hpp
vrml_proc/: CMakeLists.txt
vrml_proc/src/: GroupHandler.MeshConversionContext.cpp  TransformHandler.MeshConversionContext.cpp  TransformationHandler.MeshConversionContext.cpp  VrmlProcessingExport.hpp  VrmlProcessor.hpp
vrml_proc/src/actions/: BaseConversionContextAction.hpp  BaseConversionContextActionMap.hpp  BoxAction.cpp  BoxAction.hpp  ConversionContextAction.hpp  ConversionContextActionMap.cpp  ConversionContextActionMap.hpp  GeometryAction.hpp  GroupAction.cpp  GroupAction.hpp  IndexedFaceSetAction.hpp  ShapeAction.cpp  ShapeAction.hpp  SpotlightAction.hpp
vrml_proc/src/conversion_context/: BaseConversionContext.hpp  Mergeable.hpp  MeshConversionContext.hpp  StlBaseStructure.hpp  VectorConversionContext.hpp
vrml_proc/src/core/: FileReader.hpp  FileWriter.hpp  MemoryMappedFileReader.cpp  SimpleFileReader.cpp
vrml_proc/src/core/config/: VrmlProcConfig.hpp
vrml_proc/src/core/contracts/: Comparable.hpp
vrml_proc/src/core/errors/: Error.hpp  JsonError.hpp  NullPointerError.hpp  UnsupportedOperationError.hpp
vrml_proc/src/core/io/: FileReader.hpp  FileWriter.hpp  JsonFileReader.hpp  MemoryMappedFileReader.cpp  MemoryMappedFileReader.hpp  SimpleFileReader.cpp  SimpleFileReader.hpp
vrml_proc/src/core/logger/: Logger.cpp  Logger.hpp
vrml_proc/src/core/utils/: FormatString.hpp  ManualTimer.hpp  Range.hpp  ScopedTimer.hpp  TypeToString.hpp
vrml_proc/src/math/: Angle.hpp  Quaternion.hpp  Transformation.hpp  TransformationMatrix.cpp  TransformationMatrix.hpp
vrml_proc/src/math/cgal/: CGALBaseTypesForVrml.hpp
vrml_proc/src/math/utils/: Point.hpp
vrml_proc/src/parser/: BufferView.hpp  Parser.hpp  ParserResult.hpp  VrmlParser.cpp  VrmlParser.hpp
vrml_proc/src/traversors/: FullParsedVrmlFileContext.hpp  FullParsedVrmlNodeContext.hpp  VrmlFileTraversor.cpp  VrmlFileTraversor.hpp  VrmlNodeTraversor.cpp  VrmlNodeTraversor.hpp
vrml_proc/tests/: Int32ArrayGrammarTest.cpp  VRMLFileGrammarTest.cpp  Vec3fArrayGrammarTest.cpp  Vec3fGrammarTest.cpp  Vec4fGrammarTest.cpp  VrmlFieldExtractorTest.cpp  VrmlFileGrammarTest.cpp  VrmlFileTraversorTest.cpp  VrmlNodeGrammarTest.cpp
vrml_proc/tests/test-data/: Vec4fGrammarTestDataset.hpp
vrml_proc/tests/test_data/: VRMLFileGrammarTestDataset.hpp  Vec3fArrayGrammarTestDataset.hpp  Vec3fGrammarTestDataset.hpp  VrmlFieldExtractorTestDataset.hpp  VrmlFileGrammarTestDataset.hpp  VrmlFileTraversorTestDataset.hpp
vrmlproc/: CMakeLists.txt
vrmlproc/src/: Int32Array.hpp  Printable.hpp  USENode.hpp  VRMLNode.cpp  VRMLUnits.hpp  Vec3f.cpp  Vec3f.hpp  Vec3fArray.hpp  test.cpp  vrml_processing.cpp  vrml_processing.hpp
vrmlproc/src/actions/: BaseConversionContextAction.hpp  BaseConversionContextActionMap.hpp  GroupAction.hpp  SpotlightAction.hpp
vrmlproc/src/conversion_context/: BaseConversionContext.hpp  Mergeable.hpp  MeshConversionContext.hpp  StlBaseStructure.hpp  VectorConversionContext.hpp
vrmlproc/src/core/: MemoryMappedFileReader.hpp  SimpleFileReader.cpp  SimpleFileReader.hpp
vrmlproc/src/parser/: Parser.hpp  SetupIntegrity.cpp  SetupIntegrity.hpp  VRMLNodeManager.hpp  VRMLParser.cpp  VrmlParser.hpp  vrml_processing.cpp  vrml_processing.hpp
vrmlproc/src/traversors/: VrmlFileTraversor.hpp  VrmlNodeTraversor.hpp
vrmlproc/tests/: IdentifierGrammarTest.cpp  Int32ArrayGrammarTest.cpp  SetupIntegrityTest.cpp  VRMLFileGrammarTest.cpp  Vec3fArrayGrammarTest.cpp  Vec3fGrammarTest.cpp  Vec4fGrammarTest.cpp  VrmlFileTraversorTest.cpp
vrmlproc/tests/test-data/: Int32ArrayGrammarTestDataset.hpp  VRMLFileGrammarTestDataset.hpp  Vec3fArrayGrammarTestDataset.hpp  Vec3fGrammarTestDataset.hpp  Vec4fGrammarTestDataset.hpp  VrmlFileTraversorTestDataset.hpp
(+183 files in other folders)
